<resources>
    <string name="app_name">Pop Movies</string>
    <string name="movie_details">MovieDetail</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="movie_extra">MOVIE_EXTRA</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->

    <!-- Sort order -->
    <string name="pref_sort_by_label">Sort Movies By</string>
    <string name="pref_sort_by_key" translatable="false">sort_movies_by</string>
    <string name="pref_sort_by_default" translatable="false">popular</string>
    <string name="pref_sort_by_popular" translatable="false">popular</string>
    <string name="pref_sort_by_top_rated" translatable="false">top_rated</string>
    <string name="pref_sort_by_favorites" translatable="false">favorites</string>
    <string-array name="pref_sort_by">
        <item>Popularity</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>
    <string-array name="pref_sort_by_values">
        <item>@string/pref_sort_by_popular</item>
        <item>@string/pref_sort_by_top_rated</item>
        <item>@string/pref_sort_by_favorites</item>
    </string-array>

    <!-- Poster image size -->
    <string name="pref_poster_size_label">Poster Image Width</string>
    <string name="pref_poster_size_key" translatable="false">poster_size</string>
    <string name="pref_poster_size_default" translatable="false">w185</string>
    <integer-array name="pref_poster_sizes_options">
        <item>92</item>
        <item>154</item>
        <item>185</item>
        <item>342</item>
        <item>500</item>
        <item>782</item>
    </integer-array>
    <string-array name="pref_poster_sizes_values">
        <item>w92</item>
        <item>w154</item>
        <item>w185</item>
        <item>w342</item>
        <item>w500</item>
        <item>w782</item>
    </string-array>

    <string name="pref_header_general">General</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovies.blastbet.com</string>
    <string name="content_authority">com.blastbet.nanodegree.popularmovies</string>


</resources>
