<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_sort_by_label"
        android:summary="@string/pref_sort_by_label"
        android:key="@string/pref_sort_by_key"
        android:defaultValue="@string/pref_sort_by_default"
        android:entries="@array/pref_sort_by"
        android:entryValues="@array/pref_sort_by_values"/>

    <ListPreference
        android:title="@string/pref_poster_size_label"
        android:summary="@string/pref_poster_size_label"
        android:key="@string/pref_poster_size_key"
        android:defaultValue="@string/pref_poster_size_default"
        android:entries="@array/pref_poster_sizes_options"
        android:entryValues="@array/pref_poster_sizes_values"/>

</PreferenceScreen>
